# multi-layered_mapping

./: .gitignore  Camera.py  Dockerfile  MeshLabeler.py  MeshPlacer.py  README.md  aabbtree_mod.py  environment.yml  main.py  setup.cfg
mesh_class_labeling/: MeshLabeler.py  README.md  label_mesh.py
mesh_class_labeling/utils/: assess_reconstruction_completeness.py  display_marsh_cover_on_mesh.m  helpers.py
mesh_object_placing/: MeshPlacer.py  place_on_mesh.py
mesh_object_placing/utils/: helpers.py
pycamgeom/: setup.cfg
pycamgeom/src/pycamgeom/: projector.py
utils/: display_marsh_cover_on_mesh_singleplant.m  helpers.py  image_processing.py  marsh_plant_color_key.m
