[metadata]
name = pycamgeom
version = 0.1
author = Brian Hopkinson
author_email = bmhopkin@uga.edu
description = 'camera models and associated classes'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bmhopkinson/pycamgeom

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
